syntax = "proto3";

option csharp_namespace = "PB_Server";

message NumbersRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message NumbersResponse {
  int32 sum = 1;
}

service SumService {
  rpc Summing (NumbersRequest) returns (NumbersResponse);
}
